# EasyLearnCoding

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.txt  setup.bat  setup.sh  start.bat  start.sh
backend/: cli.py  config.py  database.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
backend/llm/: __init__.py  base.py  openai_like.py
backend/prompts/: chat_assistant.txt  generate_exercise.txt  generate_lesson.txt  generate_outline.txt
backend/routers/: chat.py  code_executor.py  courses.py  environment.py  exercises.py  languages.py  lessons.py  sections.py  settings.py  topics.py
backend/services/: agent_loop.py  ai_service.py  assertion_generator.py  code_runner.py  env_checker.py  exercise_schema.py  exercise_service.py  outline_service.py  template_generator.py  tools.py
backend/test_harnesses/: __init__.py  bash_harness.py  c_harness.py  compute_scripts.py  cpp_harness.py  javascript_harness.py  python_harness.py
backend/tests/: conftest.py  test_agent_loop.py  test_ai_service.py  test_ai_service_exercise.py  test_assertion_generator.py  test_code_executor.py  test_compute_scripts.py  test_courses.py  test_env_checker.py  test_environment.py  test_exercise_regenerate.py  test_exercise_schema.py  test_exercise_service.py  test_exercises.py  test_harness_compilation.py  test_languages.py  test_lessons.py  test_outline_generation.py  test_template_generator.py  test_tools.py  test_topics.py
backend/tests/e2e/: test_outline_generation.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
